--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "cy:dashboard": "npx cypress run --record --key e3a68df2-ca8c-4019-b7be-2f099007445e",
-    "cy:spec1": "cypress run --spec 'cypress/integration/login.spec.js' --record --key e3a68df2-ca8c-4019-b7be-2f099007445e",
-    "cy:spec2": "cypress run --spec 'cypress/integration/hall.spec.js' --record --key e3a68df2-ca8c-4019-b7be-2f099007445e",
-    "cy:parallel": "npm run cy:spec1 -- --browser chrome --group Spec1 --ci-build-id 1 & npm run cy:spec2 -- --browser chrome --group Spec2 --ci-build-id 1"
+    "cy:spec2": "cypress run --spec 'cypress/integration/login.spec.js' --record --key e3a68df2-ca8c-4019-b7be-2f099007445e",
+    "cy:spec1": "cypress run --spec 'cypress/integration/petshop.spec.js' --record --key e3a68df2-ca8c-4019-b7be-2f099007445e",
+    "cy:parallel": "start npm run cy:spec1 -- --browser chrome --group Spec1 --ci-build-id 15 & npm run cy:spec2 -- --browser electron  --group Spec2 --ci-build-id 15"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
     "@4tw/cypress-drag-drop": "^2.1.0",
     "cypress": "^9.2.0",
     "cypress-file-upload": "^5.0.8"
+  },
+  "dependencies": {
+    "cypress-parallel": "^0.8.1"
   }
 }
